# CmakeTutorial

./: .gitignore  CMakeLists.txt  clean.sh  configure.sh  gitignore  main.cpp  main.qml  readme.md  run.sh
include/: backend.h
src/: backend.ccp
